--- a/index.html
+++ b/index.html
@@ -1,76 +1,68 @@
 <!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>Angela's Personal Site</title>
     <link rel="stylesheet" href="style.css">
-    <title>Hellen's Personal Site</title>
-</head>
+  </head>
 
-<body>
-    <table cellspacing="50">
-        <tr>
-            <td>
-                <img src="images/IMG_8593.JPG" alt="Hellen Tamara" class="main-img">
-            </td>
-            <td>
-                <h1>Hellen Tâmara</h1>
-                <p>Front-end developer in process</p>
-                <p>I 🤍 reading and puzzles of all kinds</p>
-            </td>
-        </tr>
+  <body>
+    <table cellspacing="20">
+      <tr>
+        <td><img src="images/angela.png" alt="angela profile picture"></td>
+        <td><h1>Angela Yu</h1>
+        <p><em>Founder and CTO of <strong><a href="https://www.appbrewery.co/">The App Brewery</a></strong>.</em></p>
+        <p>I am an iOS and Web Developer. I ❤️ coffee and brew my own beers.</p></td>
+      </tr>
     </table>
     <hr>
-    <h3>Education</h3>
+    <h3>Books and Teaching</h3>
     <ul>
-        <li>System Analysis and Development Graduation, UNICSUL</li>
-        <li>English Conversation Course, CEBRAC</li>
-        <li>Japanese Online Program, LR PASSARI IDIOMAS EPP </li>
-        <li>TESOL/TEFL, World TESOL Academy</li>
+      <li>The Complete iOS App Development Bootcamp</li>
+      <li>The Complete Web Development Bootcamp</li>
     </ul>
     <hr>
     <h3>Work Experience</h3>
-    <table cellspacing="20">
-        <thead>
-            <th>Dates</th>
-            <th>Work</th>
-        </thead>
+    <table cellspacing="10">
+      <thead>
         <tr>
-            <td>2015-2017</td>
-            <td>Administrative Assistant at Universo dos Cartuchos</td>
+          <th>Dates</th>
+          <th>Work</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>2009-2010</td>
+          <td>Researcher at The Institute of Cognitive Neurosciences</td>
         </tr>
         <tr>
-            <td>2017</td>
-            <td>Real Estate Assistant at Fabiano Carvalho Imobiliária</td>
+          <td>2010-2013</td>
+          <td>Lead Developer at Tempo App</td>
         </tr>
         <tr>
-            <td>2018</td>
-            <td>Private English Teacher - Freelancing</td>
+          <td>2013-2015</td>
+          <td>Clinical Doctor at the National Health Service</td>
         </tr>
-        <tr>
-            <td>2018-2022</td>
-            <td>Office Assistant at Talitha Sá (Clothing Store)</td>
-        </tr>
+      </tbody>
     </table>
     <hr>
     <h3>Skills</h3>
-    <table cellspacing ="20">
-        <tr>
-            <td>HTML5</td>
-            <td>⭐️⭐️⭐️</td>
-        </tr>
-        <tr>
-            <td>CSS</td>
-            <td>⭐️⭐️⭐️</td>
-        </tr>
-        <tr>
-            <td>MySQL</td>
-            <td>⭐️</td>
-        </tr>
+    <table cellspacing="10">
+      <tr>
+        <td>iOS Development</td>
+        <td>⭐️⭐️⭐️⭐️⭐️</td>
+      </tr>
+      <tr>
+        <td>Web Development</td>
+        <td>⭐️⭐️⭐️⭐️⭐️</td>
+      </tr>
+      <tr>
+        <td>Photography</td>
+        <td>⭐️⭐️</td>
+      </tr>
     </table>
     <hr>
-    <a href="hobbies.html">My hobbies</a>
-    <a href="contact.html">Contact Me</a>
-</body>
-
+    <a href="hobbies.html">My Hobbies</a>
+    <a href="contact-me.html">Contact Me</a>
+  </body>
 </html>
