--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Contact me</title>
 </head>
 <body>
@@ -15,6 +16,7 @@
     </address>
     <p>+81 090 4483 3110</p>
     <p>hellen.tamara@outlook.com</p>
+    <hr>
     <form action="mailto:htamis@hotmail.com" method="post" enctype="text/plain">
         <label for="name">Your name:</label>
         <input type="text" id="name" name="name"> <br>
